Fix contact icon padding for alignment

--- a/src/client/components/organisms/office-result/office-result.scss
+++ b/src/client/components/organisms/office-result/office-result.scss
@@ -215,4 +215,5 @@
 
 .contactButton {
   background-color: #fff;
+  padding: 0;
 }
